# abacus-forge

./: .gitignore  AGENTS.md  README.md  ROADMAP.md  pyproject.toml
.trae/specs/abacus-forge-review/: checklist.md  spec.md  tasks.md
docs/: abacus-forge-a-plus-light-b-implementation-plan-2026-04-28.md  abacus-forge-diagnostics-magnetism-implementation-plan-2026-04-29.md  abacus-forge-review.md  abacus-forge-submodule-code-review-plan-2026-04-25.md  abacus-forge-submodule-review-2026-04-30.md
docs/archive/: abacus-forge-cli-docs-and-input-trio-plan-2026-04-29.md  abacus-forge-input-collect-implementation-plan-2026-04-28.md  abacus-forge-multilog-collect-plan-2026-04-29.md  abacus-forge-p0-partial-p1-implementation-plan-2026-04-28.md  abacus-forge-stdout-log-discovery-plan-2026-04-29.md
examples/NiO_inputs/: INPUT  STRU  gpu_abacus.sbatch
src/abacus_forge/: __init__.py  api.py  assets.py  band_data.py  cli.py  cube.py  dos_data.py  dos_postprocess.py  input_io.py  modify.py  perturbation.py  prepare_profiles.py  pyatb.py  result.py  runner.py  sample_outputs.py  structure.py  structure_recognition.py  tasks.py  validation.py  workspace.py
src/abacus_forge/collectors/: __init__.py  abacus.py  registry.py
src/abacus_forge/composite/: __init__.py  common.py  convergence.py  elastic.py  eos.py  phonon.py  (+2 more)
tests/: test_api.py  test_cli.py  test_collect_abacus_reference.py  test_composite.py  test_dos_data.py  test_dos_postprocess.py  test_input_io.py  test_maturation_packs.py  test_modify.py  test_perturbation.py  test_pyatb.py  test_structure.py  test_tasks.py
