[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "abacus-forge"
version = "0.1.0"
description = "Minimal ABACUS execution substrate for prepare/run/collect/export primitives."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "PAIMON contributors"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "ase",
    "dpdata",
    "matplotlib",
    "numpy",
    "pymatgen",
]

[project.optional-dependencies]
dev = [
    "pytest>=7,<9",
]
phonon = [
    "phonopy",
]

[project.scripts]
abacus-forge = "abacus_forge.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
